# wellmap_qpcr

./: README.rst  pyproject.toml
.github/workflows/: test_and_release.yml
docs/: Makefile  basic_usage.rst  conf.py  efficiency.lyx
wellmap_qpcr/: __init__.py  biorad.py  load.py  utils.py
wellmap_qpcr/analysis/: check_efficiency.py  cq_heatmap.py  main.py  optimize_ta.py
wellmap_qpcr/analysis/relative_expression/: __init__.py  amplification.py  calc.py  expression.py  layout.py  melt.py
wellmap_qpcr/load/: __init__.py  biorad.py  infer.py
wellmap_qpcr/scripts/: check_efficiency.py  main.py  optimize_ta.py
