[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wellmap_qpcr"
authors = [
  {name = "Kale Kundert", email = "kale@thekunderts.net"},
]
readme = "README.rst"
dynamic = ["version", "description"]
requires-python = "~=3.6"
dependencies = [
  'wellmap',
  'numpy',
  'scipy',
  'pandas',
  'matplotlib',
  'more_itertools',
  'color_me',
  'byoc',
  'docopt',
]
classifiers = [
  'Programming Language :: Python :: 3.6',
]

[project.optional-dependencies]
test = [
  'pytest',
  'pytest-cov',
  'coveralls',
]
doc = [
  'sphinx',
  'sphinx_rtd_theme',
  'autoclasstoc',
]

[project.scripts]
qpcr-relative-expression = "wellmap_qpcr.analysis.relative_expression:main"
qpcr-check-efficiency = "wellmap_qpcr.analysis.check_efficiency:CheckEfficiency.entry_point"
qpcr-optimize-ta = "wellmap_qpcr.analysis.optimize_ta:OptimizeTa.entry_point"
qpcr-cq-heatmap = "wellmap_qpcr.analysis.cq_heatmap:CqHeatmap.entry_point"

[project.urls]
'Documentation' = 'https://wellmap_qpcr.readthedocs.io/en/latest/'
'Version Control' = 'https://github.com/kalekundert/wellmap_qpcr'
'Bug Tracker' = 'https://github.com/kalekundert/wellmap_qpcr/issues'
'Continuous Integration' = 'https://github.com/kalekundert/wellmap_qpcr/actions'
'Test Coverage' = 'https://coveralls.io/github/kalekundert/wellmap_qpcr'

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.rst'"
doctest_optionflags = 'NORMALIZE_WHITESPACE'

[tool.semantic_release]
branch = 'release'
version_variable = 'wellmap_qpcr/__init__.py:__version__'
build_command = 'python -m pip install flit && flit build'
major_on_zero = false
